--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,6 @@
 /* Custom CSS for black theme */
 body {
-  background-color: #000;
+    background-color: #0f0f0f;
   color: #fff;
   margin: 0;
   padding: 0;
