--- a/static/index.css
+++ b/static/index.css
@@ -83,7 +83,7 @@ a{
   outline: none;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 #footer {
   position: fixed;
   left: 0;
@@ -91,7 +91,7 @@ a{
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: #99ccff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Lexend", sans-serif;
   width: 100%;
   height:15px;
   background-color: #000;
