--- a/static/index.css
+++ b/static/index.css
@@ -15,7 +15,7 @@ body {
 #header h1 {
   margin: 0;
   font-size: 24px;
-  font-family: 'Arial', sans-serif;
+  font-family: "Lexend", sans-serif;
   color: #fff;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -36,7 +36,7 @@ body {
   font-size: 24px;
   cursor:pointer;
   text-transform: uppercase;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Lexend", sans-serif;
   line-height: 1.5;
   margin-bottom: 20px;
 }
