--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,5 @@
   /* Custom CSS for black theme */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
   body {
       background-color: #0f0f0f;
       color: #fff;
@@ -15,7 +16,7 @@
 
   #header h1 {
       margin: 0;
-      font-size: 24px;
+      font-size: 30px;
       color: #fff;
       letter-spacing: 2px;
       text-transform: uppercase;
@@ -58,10 +59,12 @@
       background-repeat: no-repeat;
       background-position: 95% center;
       transition: box-shadow 0.3s ease, transform 0.3s ease; /* smooth transition */
+    font-family: "Roboto", sans-serif;
+
   }
 
   .form__input::placeholder {
-      color: #aaa;
+      color: #d4d4d4;
       text-align: center;
   }
 
@@ -80,3 +83,8 @@
       font-size: 18px;
       cursor: pointer;
   }
+.gtext {
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff;
+  font-size: 39px;
+
+}
