--- a/static/index.css
+++ b/static/index.css
@@ -54,7 +54,7 @@
       background-color: #222;
       color: #fff;
       text-align: center;
-      background-image: url('lol2.png');
+      background-image: url('/lol2.png');
       background-size: 20px;
       background-repeat: no-repeat;
       background-position: 95% center;
